[package]
name = "labhub"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
edition = "2018"
license = "Unlicense"
description = "Bot for running builds against GitHub with GitLab CI"
repository = "https://github.com/brndnmtthws/labhub"
readme = "README.md"
keywords = ["github", "gitlab", "ci", "restful", "rest-api"]
categories = ["development-tools", "development-tools::build-utils"]

[badges]
travis-ci = { repository = "brndnmtthws/labhub", branch = "master" }

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# gitlab = "0.1104"
# git2 = "0.8"
# github-rs = { git = "https://github.com/mgattozzi/github-rs.git" }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]
