[package]
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
categories = ["development-tools", "development-tools::build-utils"]
description = "Bot for running builds against GitHub with GitLab CI"
edition = "2018"
keywords = ["github", "gitlab", "ci", "restful", "rest-api"]
license = "Unlicense"
name = "labhub"
readme = "README.md"
repository = "https://github.com/brndnmtthws/labhub"
version = "0.1.11"

[badges]
gitlab = { repository = "brndnmtthws-oss/labhub", branch = "master" }

[dependencies]
futures = "0.1"
git2 = "0.10"
hex = "0.4"
lazy_static = "1.3"
log = "0.4"
percent-encoding = "2.1"
regex = "1"
reqwest = "0.9"
ring = "0.13"
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.1"
toml = "0.5"
url = "2.1"
yansi = "0.5"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4"

[dev-dependencies]
mockers = "0.21"
mockers_derive = "0.21"
env_logger = { version = "0.6", default-features = false }
